--- a/css/styles.css
+++ b/css/styles.css
@@ -1,50 +1,54 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    width: 100%;
+    display: flex;
+  }
 
- body {
-        font-family: Arial, sans-serif;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-      .container {
-        height: 100%;
-        position: relative;
-      }
-      input {
-        font-size: 12px;
-      }
-      h1 {
-        color: #525454;
-        font-size: 22px;
-        margin: 0 0 10px 0;
-        text-align: center;
-      }
-      hr {
-        background: #D0D7D9;
-        height: 1px;
-        margin: 20px 0 20px 0;
-        border: none;
-      }
-      #map {
-        bottom:0px;
-        height: 100%;
-        left: 362px;
-        position: absolute;
-        right: 0px;
-      }
-      .options-box {
-        background: #fff;
-        border: 1px solid #999;
-        border-radius: 3px;
-        height: 100%;
-        line-height: 35px;
-        padding: 10px 10px 30px 10px;
-        text-align: left;
-        width: 340px;
-      }
-      #pano {
-        width: 200px;
-        height: 200px;
-      }
-      .text {
-        font-size: 12px;
-      }
+#map {
+    width: 100%;
+    height: 100%;
+  position: absolute;
+    }
+
+#menu {
+    position: absolute;
+    max-height: 100%;
+    overflow: hidden;
+    top: 15px;
+    right: 20px;
+    padding-bottom: 20px;
+    background-color: skyblue;
+    width: 22%;
+    border-radius: 6px;
+
+    }
+
+#heading {
+    overflow: hidden;
+    top: 15px;
+    right: 20px;
+    padding-bottom: 25px;
+    background-color: skyblue;
+    color: #ffffff;
+    width: 50%;
+    margin-right: 30%;
+    height: 30px;
+    text-align: center;
+    background-color: skyblue;
+    position: absolute;
+    max-height: 100%;
+
+    }
+
+.list, .search, #header{
+    padding-left: 10px;
+  }
+
+.input{
+        border-radius: 6px;
+        border: 1px solid #19A7E2;
+        width: 250px;
+        height: 30px;
+
+}
